# libsql_dart_sdk

./: .gitignore  Cargo.toml  LICENSE  README.md  pubspec.yaml
lib/: database.dart  native_libsql_api.dart  native_libsql_api.def.dart
lib/native/: native_api.dart  native_api.database.dart  native_api.db_close.dart  native_api.db_exec.dart  native_api.db_open.dart  native_api.result.dart
src/: database.rs  errors.rs  lib.rs
